# alya.io

./: .gitignore  Makefile  pyproject.toml
backend/: .air.toml  .gitignore  Dockerfile  Makefile  docker-compose.yml  go.mod  main.go
backend/cmd/server/: main.go
backend/config/: config.json
backend/internal/api/: router.go
backend/internal/api/handler/: video_handler.go
backend/internal/api/middleware/: auth.go
backend/internal/config/: config.go  env.go
backend/internal/domain/: activity.go  analytics.go  bookmark.go  note.go  notification.go  playlist.go  search.go  settings.go  summary.go  tag.go  transcript.go  user.go  video.go
backend/internal/repository/postgres/: db.go  transcript_repository.go  video_repository.go
backend/internal/service/: transcript_service.go  video_service.go  youtube_scraper.go
backend/k8s/: deploy.sh  ingress.yaml
backend/k8s/base/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  secrets.yaml  service.yaml
backend/k8s/overlays/development/: kustomization.yaml  patch.yaml
backend/k8s/overlays/production/: kustomization.yaml  (+1 more)
backend/migrations/: 000001_create_videos_table.down.sql  000001_create_videos_table.up.sql  000002_create_transcripts_table.down.sql  000002_create_transcripts_table.up.sql
backend/pkg/errors/: dberrors.go  errors.go
backend/pkg/logger/: logger.go  middleware.go  trace.go
backend/pkg/response/: response.go
src/: main.py
src/api/: app.py
src/api/middleware/: logging.py
src/api/routes/: health.py  root.py
src/core/: config.py
src/utils/: logger.py
